--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,9 @@
 * {
     font-family: "Open Sans", sans-serif;
 }
+#about {
+    background-color: #f5f5f5;
+}
 nav {
     width: 100%;
     position: absolute;
@@ -133,4 +136,42 @@ footer ul li {
 }
 footer ul li a {
     color: #fff;
+}
+footer p {
+    text-align: right;
+    color: #fff;
+}
+.topBannerContainer {
+    height: 50vh;
+    width: 100%;
+    background-image: url(../img/aboutBanner.jpg);
+    background-size: cover;
+    background-position-y: 30%;
+}
+.topBannerContainer h1 {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+}
+.aboutContainer {
+    width: 80%;
+    margin: 60px auto;
+    box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12);
+    padding: 5%;
+}
+.aboutContainer h1 {
+    text-align: center;
+    margin: 20px 0;
+}
+#about nav a {
+    color: #fff;
+}
+.aboutContainer img {
+    margin: 20px 0;
+}
+.homeGallerySection img {
+    width: 100%;
+    height: 200px;
 }
