--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,7 @@ nav {
     padding: 5px;
 }
 .homeGallerySection ul {
-    width: 50%;
+    width: 60%;
     margin: 0px auto 50px auto;
 }
 .homeGallerySection li {
@@ -171,8 +171,11 @@ footer p {
 }
 .aboutContainer img {
     margin: 20px 0;
+    width: 100%;
+    height: auto;
 }
 .homeGallerySection img {
     width: 100%;
     height: 200px;
+    background-color: white;
 }
