--- a/css/index.css
+++ b/css/index.css
@@ -50,15 +50,17 @@ nav {
 }
 .homeGallerySection img {
     width: 100%;
-    height: auto;
+    height: 250px;
     box-sizing: border-box;
 }
 .homeGallerySection .col-md-3 {
     padding: 5px;
 }
-.homeGallerySection ul {
-    width: 60%;
-    margin: 0px auto 50px auto;
+.tabsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 .homeGallerySection li {
     display: inline;
@@ -76,7 +78,7 @@ nav {
 }
 .brandBanner {
     width: 100%;
-    background-color: #8a8a8a;
+    background-color: #20b99b;
     color: #fff;
     padding: 3% 0;
     margin: 60px 0;
@@ -96,13 +98,15 @@ nav {
 }
 .brandContainer button {
     padding: 15px 30px;
-    border-radius: 25px;
-    border: none;
-    transition: .4s;
+    border: 2px solid #fff;
+    background-color: transparent;
+    font-weight: 600;
+    color: #fff;
 }
 .brandContainer button:hover {
-    background-color: #f5f5f5;
+    background-color: #fff;
     cursor: pointer;
+    color: #000;
 }
 .teamSection {
     width: 80%;
@@ -129,10 +133,17 @@ footer {
 footer .footerLinks {
     width: 80%;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-around;
+}
+.footerLinks ul {
+    padding: 0;
 }
 footer ul li {
     display: inline;
-    margin:  0 20px;
+    margin-right: 20px;
 }
 footer ul li a {
     color: #fff;
@@ -156,18 +167,71 @@ footer p {
     color: #fff;
 }
 .aboutContainer {
-    width: 80%;
-    margin: 60px auto;
+    width: 100%;
+    padding: 5% 10%;
     box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12);
-    padding: 5%;
+    background-color: #fff;
+}
+.aboutServiceContainer  {
+    padding: 60px 10%;
+    background-color: #fff;
+}
+.aboutServiceContainer h1 {
+    text-align: center;
+    font-size: 42px;
+    font-weight: 100;
+    margin: 30px 0 60px 0;
+}
+.aboutServiceContainer i {
+    font-size: 47px;
+}
+.aboutServiceContainer h2 {
+    font-size: 22px;
+    font-weight: 400;
+    margin: 10px 0;
+}
+.aboutServiceContainer p {
+    font-size: 14px;
+    color: #999;
+    font-weight: 100;
+}
+.aboutBanner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 5% 0;
+    background-color: #20b99b;
+    color: #fff;
+}
+.aboutBanner h1 {
+    font-size: 32px;
+    font-weight: 100;
+}
+.aboutBanner a {
+    padding: 8px 20px;
+    border: 2px solid #fff;
+    color: #fff;
+    font-size: 12px;
+    margin-left: 30px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+.aboutBanner a:hover {
+    text-decoration: none;
+    background-color: #fff;
+    color: #000;
 }
 .aboutContainer h1 {
     text-align: center;
     margin: 20px 0;
+    font-weight: 100;
 }
 .aboutContainer h3 {
     text-align: center;
-    margin: 20px 0;
+    font-weight: 100;
+    margin: 40px 0 20px 0;
 }
 .aboutContainer p{
     text-align: center; 
@@ -181,13 +245,111 @@ footer p {
     width: 100%;
     height: auto;
 }
-.homeGallerySection img {
+.galleryHeader {
+    height: 100vh;
     width: 100%;
-    height: 200px;
-    background-color: white;
+    background-image: url(../img/gallery2.jpg);
+    background-position-y: -10%;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 15%;
 }
-.contact label {float: left; display: block; text-align: right; width:120px; padding-right:10px; }
-.contact input{ display: block; margin-bottom: 20px;}
-.contact textarea { display: block; margin-bottom: 20px;}
-.contact input[type="submit"]{margin-left: 130px;}
-.contact h2 {text-align: center; }
+.galleryTitle {
+    position: relative;
+    bottom: 100px;
+}
+.galleryHeader .galleryTitle h1 {
+    font-weight: 700;
+    font-size: 120px;
+    line-height: 120px;
+}
+.galleryTitle p {
+    font-size: 32px;
+    font-weight: 100;
+}
+.galleryTitle a {
+    padding: 8px 16px;
+    background-color: #20b99b;
+    color: #fff;
+    border: 1px solid transparent;
+    margin-right: 20px;
+}
+.galleryTitle a:hover {
+    color: #20b99b;
+    background-color: transparent;
+    border: 1px solid #20b99b;
+    text-decoration: none;
+}
+.galleryContent {
+    width: 100%;
+    min-height: 200px;
+}
+.galleryContent .galleryRow {
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+}
+.galleryContent .imageBox {
+    flex-grow: 1;
+    flex-basis: 25%;
+    background-size: cover;
+    height: 300px;
+    transition: .4s;
+}
+.galleryContent .imageBox:hover {
+    filter: brightness(120%);
+}
+.blogTopBanner {
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/blog1.jpg);
+}
+.blogTopBanner h1 {
+    color: #fff;
+    font-size: 67px;
+}
+.blogContent {
+    padding: 5% 10%;
+}
+.blogBlock {
+    width: 100%;
+    margin: 20px 0;
+}
+.blogBlock img {
+    width: 100%;
+    height: auto;
+}
+.blogBlock h1 {
+    margin: 20px 0 10px 0;
+    font-size: 32px;
+    font-weight: 600;
+}
+.blogBlock span {
+    font-weight: 100;
+    color: #999;
+    font-size: 14px;
+}
+.blogBlock p {
+    font-weight: 200;
+    color: #444;
+    font-size: 16px;
+}
+.blogBlock .read {
+    padding: 8px 20px;
+    color: #000;
+    border: 2px solid #000;
+    font-weight: 600;
+    margin-top: 20px;
+    display: inline-block;
+}
+.blogBlock .read:hover {
+    background-color: #000;
+    color: #fff;
+    text-decoration: none;
+}
