--- a/css/index.css
+++ b/css/index.css
@@ -128,7 +128,7 @@ nav {
 footer {
     width: 100%;
     padding: 5% 0;
-    background-color: #8a8a8a;
+    background-color: #333;
 }
 footer .footerLinks {
     width: 80%;
@@ -352,4 +352,91 @@ footer p {
     background-color: #000;
     color: #fff;
     text-decoration: none;
+}
+.contactSection {
+    padding: 10%;
+}
+.contactTitle {
+    text-align: center;
+}
+.contactTitle h3 {
+    font-weight: 300;
+    font-size: 16px;
+    color: #20b99b;
+    text-transform: uppercase;
+}
+.contactTitle h1 {
+    font-size: 42px;
+    font-weight: 100;
+}
+.contactRow {
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-around;
+}
+.contactItem i {
+    font-size: 22px;
+    color: #20b99b;
+}
+.contactItem {
+    font-size: 22px;
+    font-weight: 100;
+}
+.formMainRow {
+    display: flex;
+    justify-content: space-evenly;
+}
+.formLeft {
+    width: 50%;
+    padding: 30px 15px;
+}
+.formRight {
+    width: 50%;
+    padding: 30px 15px;
+}
+.formRight textarea {
+    width: 100%;
+
+}
+.formMainRow input {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    margin: 15px 0;
+}
+.formMainRow input:focus {
+    outline: none;
+}
+.formMainRow textarea {
+    padding: 15px;
+    margin:15px 0;
+    border: 1px solid #dbdbdb;
+}
+.formMainRow textarea:focus {
+    outline: none;
+}
+.contactTopBanner iframe {
+    width: 100%;
+    height: 40vh;
+}
+.articleTopBanner {
+    height: 10vh;
+    width: 100%;
+}
+.articleTopBanner h1 {
+    color: #fff;
+    font-size: 67px;
+}
+.articleContent {
+    padding: 5% 10%;
+}
+#article nav a {
+    color: #000;
+}
+.articleDetail {
+    display: flex;
+    justify-content: space-between;
+}
+.articleDetail i.fa-heart {
+    color: #e22626;
 }
