corrected the error in footer

--- a/css/index.css
+++ b/css/index.css
@@ -128,7 +128,7 @@ nav {
 footer {
     width: 100%;
     padding: 5% 0;
-    background-color: #2;
+    background-color: #20b99b;
 }
 footer .footerLinks {
     width: 80%;
